<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/spacingHuge"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/spacingSmall"
    android:background="@color/white">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/spacingMedium"
        android:padding="@dimen/spacingMedium"
        android:text="@string/login_sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/textExtraHuge" />

    <com.chnt.gr.preOrder.view.InputLayoutWithEditTextView
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        app:itemEditTextHint="@string/email"/>

    <com.chnt.gr.preOrder.view.InputLayoutWithEditTextView
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingLarge"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:itemEditTextHint="@string/password"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacingTiny"
        android:layout_marginEnd="@dimen/spacingTiny"
        android:layout_weight="1">

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/pink"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_continue"/>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submitButton"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/spacingSmall"
            android:text="@string/register_sign_up"
            android:textAlignment="center"
            android:textColor="@color/black"/>



    </RelativeLayout>

</LinearLayout>